--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>CORE</h1>
-</body>
-</html>
+{% extends 'core/base.html' %}
+
+{% block contenido_titulo %} 
+CORE
+{% endblock contenido_titulo %}
+
+    {% block contenido %}
+    <ul>
+        <li><a href="{% url 'cliente:index' %}">ir a cliente</a></li>
+        <li><a href="{% url 'producto:index' %}">ir a producto</a></li>
+    </ul>
+    {% endblock contenido %}
